--- a/tutors-kotlin/src/main/AndroidManifest.xml
+++ b/tutors-kotlin/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.popalay.tutors"
+<manifest package="com.github.popalay.tutors"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
