--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile project(':tutors-kotlin')
+    compile project(':tutors')
 }
 repositories {
     mavenCentral()
