--- a/tutors/build.gradle
+++ b/tutors/build.gradle
@@ -10,9 +10,6 @@ android {
         targetSdkVersion 25
         versionCode 2
         versionName "1.0.2"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
@@ -24,10 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    provided 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
 }
 
