--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.0.6'
+
+    ext.versionCode = 5
+    ext.versionName = "1.0.5"
+    ext.minSdkVersion = 14
+    ext.compileSdkVersion = 25
+    ext.targetSdkVersion = 25
+    ext.buildToolsVersion = "25.0.3"
+    ext.supportLibrary = '25.3.1'
+    ext.kotlinVersion = '1.0.6'
+
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.4.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.novoda:bintray-release:0.5.0'
     }
 }
 
