--- a/tutors/build.gradle
+++ b/tutors/build.gradle
@@ -2,14 +2,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
-
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 4
-        versionName "1.0.4"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
     }
     buildTypes {
         release {
@@ -21,14 +20,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided 'com.android.support:appcompat-v7:25.1.1'
+    provided "com.android.support:appcompat-v7:$supportLibrary"
     testCompile 'junit:junit:4.12'
 }
 
 publish {
     groupId = 'com.github.popalay'
     artifactId = 'tutors'
-    publishVersion = '1.0.4'
+    publishVersion = project.versionName
     desc = 'A simple way to show the user interface tutorials'
     licences = ['Apache-2.0']
     uploadName = 'Tutors'
