--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
 
-    ext.versionCode = 5
-    ext.versionName = "1.0.5"
+    ext.versionCode = 6
+    ext.versionName = '1.0.6'
     ext.minSdkVersion = 14
     ext.compileSdkVersion = 25
     ext.targetSdkVersion = 25
-    ext.buildToolsVersion = "25.0.3"
+    ext.buildToolsVersion = '25.0.3'
     ext.supportLibrary = '25.3.1'
     ext.kotlinVersion = '1.0.6'
 
